[GEOT-4824] Integrating unsupported's gt-mark-wkt into gt-render